--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -1,16 +1,16 @@
 spring.application.name=book-service
 server.port=8082
-#--
-#-- Database configuration
-#--
+# -------------------------------
+# Database configuration (PostgresSQL)
+# -------------------------------
 spring.datasource.driver-class-name=org.postgresql.Driver
 spring.datasource.url=jdbc:postgresql://localhost:5432/bookdb
 spring.datasource.username=postgres
 spring.datasource.password=postgres
 spring.jpa.hibernate.ddl-auto=update
-#---
-#--- Configuration of Eureka client
-#---
+# -------------------------------
+# Eureka client Configuration
+# -------------------------------
 #- Register with Eureka and send heartbeats
 eureka.client.register-with-eureka=true
 eureka.client.fetch-registry=true
