--- a/src/test/resources/application-test.properties
+++ b/src/test/resources/application-test.properties
@@ -1,7 +1,7 @@
 # -------------------------------
 # Database configuration (H2 for testing)
 # -------------------------------
-spring.datasource.url=jdbc:h2:mem:testdb;DB_CLOSE_DELAY=-1
+spring.datasource.url=jdbc:h2:mem:testdb;MODE=PostgreSQL;DB_CLOSE_DELAY=-1
 spring.datasource.driverClassName=org.h2.Driver
 spring.datasource.username=sa
 spring.datasource.password=
@@ -12,6 +12,12 @@ spring.datasource.initialization-mode=always
 spring.h2.console.enabled=true
 spring.h2.console.path=/h2-console
 spring.h2.console.settings.trace=false
+# -------------------------------
+# Loading data
+# -------------------------------
+spring.sql.init.mode=ALWAYS
+spring.sql.init.schema-locations=classpath:schema-test.sql
+spring.sql.init.data-locations=classpath:data-test.sql
 # -------------------------------
 # JPA / Hibernate
 # -------------------------------
