--- a/src/test/resources/application-test.properties
+++ b/src/test/resources/application-test.properties
@@ -19,6 +19,14 @@ spring.jpa.hibernate.ddl-auto=create-drop
 spring.jpa.show-sql=true
 spring.jpa.properties.hibernate.format_sql=true
 # -------------------------------
+# Security Configuration
+# -------------------------------
+# Security OAuth2 Resource Server
+spring.security.oauth2.resourceserver.jwt.issuer-uri=http://localhost:8085/realms/app-mflibrary
+#--- Keycloak properties
+keycloak.authorizationUrl=${spring.security.oauth2.resourceserver.jwt.issuer-uri}/protocol/openid-connect/auth
+keycloak.tokenUrl=${spring.security.oauth2.resourceserver.jwt.issuer-uri}/protocol/openid-connect/token
+# -------------------------------
 # Eureka Configuration
 # -------------------------------
 eureka.client.enabled=false
